# Otlyra

./: .gitignore  BROWSER_UI_PLAN.md  Cargo.toml  NOTICE  README.md  about.hbs  about.toml  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  site.yml  startup-performance.yml
assets/macos/: Info.plist
crates/otlyra-app/: Cargo.toml
crates/otlyra-app/examples/: interface.rs  ui-event-cost.rs
crates/otlyra-app/src/: a11y.rs  about.rs  browser.rs  clipboard.rs  fetcher.rs  history.rs  inspector.rs  lib.rs  main.rs  mcp.rs  menu.rs  observability.rs  page.rs  preferences.rs  scene.rs  settings.rs  ui.rs
crates/otlyra-app/src/bidi/: mod.rs  server.rs
crates/otlyra-app/src/snapshots/: otlyra_app__a11y__tests__headings_links_and_text_come_out_with_their_roles.snap
crates/otlyra-app/src/widget/: controls.rs  data.rs  icon.rs  mod.rs  runtime.rs  theme.rs
crates/otlyra-app/tests/: display_list_snapshot.rs  dom_snapshot.rs  golden_image.rs  interface_golden.rs  surface_snapshot.rs
crates/otlyra-app/tests/common/: mod.rs
crates/otlyra-app/tests/snapshots/: display_list_snapshot__the_demo_scene_display_list_is_stable.snap  dom_snapshot__the_sample_page_parses_to_a_stable_tree.snap  surface_snapshot__the_about_page_outline_is_stable.snap  surface_snapshot__the_focused_selected_address_outline_is_stable.snap  surface_snapshot__the_open_menu_outline_is_stable.snap  surface_snapshot__the_settings_outline_is_stable.snap  surface_snapshot__the_toolbar_outline_is_stable.snap
crates/otlyra-css/: Cargo.toml
crates/otlyra-css/examples/: hover-cost.rs  ua-audit.rs
crates/otlyra-css/src/: appearance.rs  cascade.rs  computed.rs  invalidation.rs  lib.rs  state.rs  style.rs  stylo_dom.rs  ua.css  ua.rs
crates/otlyra-dom/: Cargo.toml
crates/otlyra-dom/src/: dump.rs  form.rs  lib.rs  limits.rs  mutator.rs  node.rs  sink.rs  submit.rs  tree.rs
crates/otlyra-dom/tests/: submit.rs
crates/otlyra-gfx/: Cargo.toml
crates/otlyra-gfx/examples/: compare.rs  raster-cost.rs
crates/otlyra-gfx/src/: display_list.rs  hit_test.rs  lib.rs  paint_target.rs  recording.rs  render.rs  skia.rs
crates/otlyra-html/: Cargo.toml
crates/otlyra-html/src/: driver.rs  encoding.rs  lib.rs  prescan.rs
crates/otlyra-html/tests/: html5lib.rs
crates/otlyra-html/tests/data/html5lib/: README.md  expectations.txt
crates/otlyra-layout/: Cargo.toml
crates/otlyra-layout/src/: box_tree.rs  builder.rs  damage.rs  dump.rs  flow.rs  fragment.rs  lib.rs  selection.rs  srcset.rs
crates/otlyra-layout/src/snapshots/: otlyra_layout__tests__a_block_document_becomes_a_block_tree.snap  otlyra_layout__tests__mixed_children_get_anonymous_block_wrappers.snap
crates/otlyra-layout/tests/: flow.rs
crates/otlyra-layout/tests/snapshots/: flow__a_single_paragraph_becomes_one_line.snap  flow__layout_is_deterministic_across_runs.snap
crates/otlyra-net/: Cargo.toml
crates/otlyra-net/src/: lib.rs  limits.rs  loader.rs  mime.rs  url.rs
crates/otlyra-net/tests/: limits.rs
crates/otlyra-paint/: Cargo.toml
crates/otlyra-paint/examples/: frame-cost.rs
crates/otlyra-paint/src/: lib.rs  widget.rs
crates/otlyra-platform/: Cargo.toml
crates/otlyra-platform/src/: a11y.rs  event_loop.rs  icon.rs  lib.rs  menu.rs  present.rs
crates/otlyra-platform/tests/: public_api.rs
crates/otlyra-text/: Cargo.toml
crates/otlyra-text/examples/: scratch_metrics.rs
crates/otlyra-text/src/: engine.rs  lib.rs  stack.rs
docs/: ime-matrix.md  interface.md  skia-wgpu-interop.md
examples/bidi/: README.md  client.py  drive.py  page.html
site/: astro.config.mjs  package-lock.json  package.json
site/src/layouts/: Base.astro
site/src/pages/: agents.astro  devtools.astro  index.astro  name.astro
tests/pages/: backgrounds.html  bars.html  basic.html  borders.html  color-scheme.html  controls.html  css.html  datalist.html  defaults.html  flex.html  fonts.html  images.html  inline-block.html  line-height.html  object-fit.html  opacity.html  pickers.html  replaced.html  srcset.html  stacking.html  tables.html  transform.html  try.html  white-space.html
tools/: echo-server.py  startup-benchmark.py
