[workspace]
resolver = "3"
members = [
    "crates/otlyra-app",
    "crates/otlyra-css",
    "crates/otlyra-dom",
    "crates/otlyra-gfx",
    "crates/otlyra-html",
    "crates/otlyra-layout",
    "crates/otlyra-net",
    "crates/otlyra-paint",
    "crates/otlyra-platform",
    "crates/otlyra-text",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
publish = false
repository = "https://github.com/octofhir/Otlyra"

# Every version is pinned exactly. No wildcards, no unpinned git dependencies.
[workspace.dependencies]
otlyra-css = { path = "crates/otlyra-css", version = "0.0.0" }
otlyra-dom = { path = "crates/otlyra-dom", version = "0.0.0" }
otlyra-gfx = { path = "crates/otlyra-gfx", version = "0.0.0" }
otlyra-html = { path = "crates/otlyra-html", version = "0.0.0" }
otlyra-layout = { path = "crates/otlyra-layout", version = "0.0.0" }
otlyra-net = { path = "crates/otlyra-net", version = "0.0.0" }
otlyra-paint = { path = "crates/otlyra-paint", version = "0.0.0" }
otlyra-platform = { path = "crates/otlyra-platform", version = "0.0.0" }
otlyra-text = { path = "crates/otlyra-text", version = "0.0.0" }

# Windowing and GPU surface. Both are wrapped by otlyra-platform: neither may
# appear in that crate's public API.
#
# `default-features = false` drops winit's X11 and Wayland backends. They are inert
# on macOS but drag in the whole wayland-scanner/quick-xml and sctk-adwaita/ttf-parser
# tree, which carries live advisories. Linux support re-enables them per target.
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
wgpu = "=30.0.0"

# Native menus. winit has none, and drawing them ourselves would lose the system
# menu bar, accessibility and system-wide shortcut handling.
#
# `default-features = false` drops muda's GTK3 and libxdo backends, which are Linux
# only and pull in the unmaintained gtk-rs GTK3 bindings. Linux re-enables them.
muda = { version = "=0.19.3", default-features = false }

# Cocoa bindings, for the Dock icon an unbundled binary cannot get from a plist.
# Versions match muda's so the two share one objc2 in the graph.
objc2 = "=0.6.4"
objc2-app-kit = "=0.3.2"
objc2-foundation = "=0.3.2"
raw-window-handle = "=0.6.2"

# 2D rasterizer, behind the PaintTarget seam.
skia-safe = "=0.99.0"

# Font enumeration, CSS family matching, shaping and line breaking.
parley = "=0.11.0"

# Geometry and brush vocabulary shared by every PaintTarget backend.
kurbo = "=0.13.1"
peniko = "=0.6.1"

# Observability.
tracing = { version = "=0.1.44", features = ["log"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }

# Data structures.
smallvec = { version = "=1.15.2", features = ["union"] }
rustc-hash = "=2.1.3"
slotmap = "=1.1.1"

# HTML tokenizer and tree construction. Hand-writing one to html5lib-green is
# 8-11 kLOC and months; the parts we do write ourselves are the ones html5ever
# leaves out, in otlyra-html.
#
# Pinned exactly and deliberately: html5ever's minors break, and its version is
# further constrained by Stylo — `markup5ever` must agree with Stylo's `web_atoms`
# when the cascade lands at M8.
html5ever = "=0.39.0"

# Zero-copy text slices off the parse buffer. `subtendril` is O(1) where `String`
# is a copy, and the tokenizer produces a great many small slices.
tendril = { version = "=0.5.1", features = ["encoding_rs"] }

# Display-list serialization, for snapshots today and IPC later.
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.147"

# Snapshot testing of display lists.
insta = "=1.48.0"

# PNG decoding, for image-comparison tests only.
png = "=0.18.1"

# Network. The feature set is Otter's, plus `stream`, so the two share one HTTP and
# TLS tree rather than resolving two of everything.
#
# `default-features = false` drops reqwest's `charset` (which is `mime` plus a second
# copy of the charset logic we own) and `system-proxy`. `rustls` brings
# `rustls-platform-verifier`, so certificates are checked against the OS trust store
# and not a vendored Mozilla list that we could never revoke from.
reqwest = { version = "=0.13.4", default-features = false, features = [
    "rustls",
    "http2",
    "json",
    "gzip",
    "stream",
] }
tokio = { version = "=1.53.0", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "fs",
    "io-util",
    "net",
] }

# Named directly, and only, so that the process can install one crypto provider
# explicitly. With two providers reachable there is no implicit default and
# `ClientConfig::builder()` panics; being explicit turns that into our decision.
rustls = { version = "=0.23.42", default-features = false, features = ["aws-lc-rs"] }

# WHATWG URL. Hand-rolling this is how CVE-2024-12224 happened.
url = "=2.5.8"

# WHATWG encodings. Gecko's decoder; the legacy tables are not writable by hand.
encoding_rs = "=0.8.35"

# CLI and error plumbing.
clap = { version = "=4.6.2", features = ["derive"] }
thiserror = "=2.0.19"
pollster = "=1.0.1"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[profile.release]
lto = "thin"
codegen-units = 16
strip = "debuginfo"
