[package]
name = "otlyra-app"
description = "The Otlyra browser shell: event loop, navigation and document lifecycle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
default-run = "otlyra"

[[bin]]
name = "otlyra"
path = "src/main.rs"

[lib]
name = "otlyra_app"
path = "src/lib.rs"

[dependencies]
otlyra-dom.workspace = true
otlyra-gfx.workspace = true
otlyra-html.workspace = true
otlyra-layout.workspace = true
otlyra-net.workspace = true
otlyra-platform.workspace = true
otlyra-text.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
png.workspace = true

[lints]
workspace = true
