[package]
name = "otlyra-app"
description = "The Otlyra browser shell: event loop, navigation and document lifecycle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
default-run = "otlyra"

[[bin]]
name = "otlyra"
path = "src/main.rs"

[lib]
name = "otlyra_app"
path = "src/lib.rs"

[dependencies]
otlyra-css.workspace = true
otlyra-dom.workspace = true
otlyra-gfx.workspace = true
otlyra-html.workspace = true
otlyra-layout.workspace = true
otlyra-net.workspace = true
url.workspace = true
otlyra-paint.workspace = true
otlyra-platform.workspace = true
otlyra-text.workspace = true
arboard.workspace = true
jiff.workspace = true
clap.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# The file dialogue is the one thing here with no answer on every platform we may
# want to run on, so it is taken only where it has one. Everywhere else the request
# to choose a file simply goes unanswered, and the control says no file was chosen.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
rfd.workspace = true

[dev-dependencies]
otlyra-text.workspace = true
insta.workspace = true
png.workspace = true

[lints]
workspace = true
