[package]
name = "otlyra-dom"
description = "The Otlyra document tree: a generational arena, its handles, and the only API that mutates it."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
html5ever.workspace = true
slotmap.workspace = true
tracing.workspace = true

[lints]
workspace = true
