[package]
name = "otlyra-gfx"
description = "Display list types, the PaintTarget seam, and its rasterizer backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
kurbo.workspace = true
peniko.workspace = true
skia-safe = { workspace = true, features = ["textlayout"] }
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { workspace = true, features = ["metal"] }

[lints]
workspace = true
