[package]
name = "otlyra-gfx"
description = "Display list types, the PaintTarget seam, and its rasterizer backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
kurbo = { workspace = true, features = ["serde"] }
peniko = { workspace = true, features = ["serde"] }
serde.workspace = true
skia-safe = { workspace = true, features = ["textlayout"] }
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { workspace = true, features = ["metal"] }

[dev-dependencies]
# For the comparison example, which writes the picture of what differed.
png.workspace = true
serde_json.workspace = true

[lints]
workspace = true
