[package]
name = "otlyra-paint"
description = "Fragments to a display list: the last step before pixels, and a pure function."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
otlyra-gfx.workspace = true
otlyra-layout.workspace = true
tracing.workspace = true

[dev-dependencies]
otlyra-html.workspace = true
otlyra-text.workspace = true

[lints]
workspace = true
